# substrate-node-template

./: .gitignore
pallets/basic/: Cargo.toml
pallets/basic/src/: lib.rs  mock.rs  tests.rs
pallets/configurable-constant/: Cargo.toml  configurable-constant.md
pallets/configurable-constant/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/: Cargo.toml  kitties.md
pallets/kitties/src/: lib.rs
pallets/lockable-currency/: Cargo.toml
pallets/lockable-currency/src/: lib.rs  mock.rs  tests.rs
pallets/mint-token/: Cargo.toml
pallets/mint-token/src/: lib.rs  mock.rs  tests.rs
pallets/monitoring/: Cargo.toml  monitoring.md
pallets/monitoring/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/offchain-worker/: Cargo.toml  offchain-worker.md
pallets/offchain-worker/src/: lib.rs  mock.rs  tests.rs
pallets/parallel/: Cargo.toml
pallets/parallel/src/: lib.rs  mock.rs  tests.rs
pallets/proof-of-existence/: Cargo.toml
pallets/proof-of-existence/src/: lib.rs  mock.rs  tests.rs
pallets/reward-coin/: Cargo.toml
pallets/reward-coin/src/: lib.rs  mock.rs  tests.rs
pallets/simple-crowdfund/: Cargo.toml
pallets/simple-crowdfund/src/: lib.rs  mock.rs  tests.rs
pallets/weights/: Cargo.toml  libV1.md  weights.md
pallets/weights/src/: lib.rs  mock.rs  tests.rs
